--- a/android.main/build.gradle
+++ b/android.main/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compile 'com.google.android:support-v4:r7'
     compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
     compile project(':android-api')
-    compile project(':core')
+//    compile project(':core')
 }
 
 android {
