--- a/core/build.gradle
+++ b/core/build.gradle
@@ -44,6 +44,7 @@ eclipse.project {
 
 dependencies {
     compile 'org.clojure:clojure:1.6.0'
+    compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
     compile 'org.clojure:java.jdbc:0.3.4'
     compile 'org.xerial:sqlite-jdbc:3.7.2'
     compile 'com.netflix.rxjava:rxjava-clojure:0.19.6'
