--- a/android.main/AndroidManifest.xml
+++ b/android.main/AndroidManifest.xml
@@ -58,6 +58,15 @@
                 <action android:name="sneer.android.service.BACKEND" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".SystemReportActivity"
+            android:label="@string/title_activity_system_report"
+            android:parentActivityName=".ui.InteractionListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="sneer.android.main.ui.InteractionListActivity" />
+        </activity>
     </application>
 
 </manifest>
