--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -13,6 +13,7 @@ sourceSets {
 
 dependencies {
     compile 'com.netflix.rxjava:rxjava-core:0.17.5'
+    compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
 }
 
 uploadArchives {
