--- a/android.main/AndroidManifest.xml
+++ b/android.main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/title_conversation_list" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
