--- a/core.tests/build.gradle
+++ b/core.tests/build.gradle
@@ -12,6 +12,11 @@ buildscript {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://clojars.org/repo" }
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'clojure'
