--- a/android.main/build.gradle
+++ b/android.main/build.gradle
@@ -19,14 +19,15 @@ buildscript {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
+    compile 'me.sneer:core:0.0.1'
     compile 'us.bpsm:edn-java:0.4.4'
     compile 'com.google.android:support-v4:r7'
     compile project(':android-api')
-//    compile project(':core')
 }
 
 android {
