set cleanEclipse as dependency for eclipse task in gradle, so no need to call “./gradlew cleanEclipse” before creating the projects

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ subprojects {
 		        }
 		    }
 	    }
+	    tasks.eclipse.dependsOn(cleanEclipse)
 	    tasks.eclipse.dependsOn(configureAndroidForEclipseTask)
     }
     }
