--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,10 @@ apply plugin: "java"
 apply plugin: "eclipse"
 apply plugin: "maven"
 
+tasks.withType(JavaCompile) { 
+    sourceCompatibility = "1.6"
+    targetCompatibility = "1.6" 
+}
 buildscript {
     repositories {
         mavenCentral()
@@ -46,11 +50,10 @@ dependencies {
     compile 'org.clojure:clojure:1.6.0'
     compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
     compile 'org.clojure:java.jdbc:0.3.4'
-    compile 'org.xerial:sqlite-jdbc:3.7.2'
     compile 'com.netflix.rxjava:rxjava-clojure:0.19.6'
     compile 'com.cognitect:transit-clj:0.8.229'
-    compile 'junit:junit:4.11'
     compile 'com.google.guava:guava:17.0'
+    compile 'junit:junit:4.+'
     compile project(':java-api')
 }
 
