--- a/java-api.tests/build.gradle
+++ b/java-api.tests/build.gradle
@@ -13,7 +13,7 @@ sourceSets {
 
 dependencies {
     compile project(':java-api')
-    compile 'junit:junit:4.+'
+    compile 'junit:junit:4.11'
 }
 
 uploadArchives {
