--- a/build.gradle
+++ b/build.gradle
@@ -47,14 +47,18 @@ subprojects {
 		                    node.appendNode('classpathentry', [kind: 'src', path: 'src'])
 		                    node.appendNode('classpathentry', [kind: 'src', path: 'gen'])
 
+		                    configurations.collect { conf ->
+		                        conf.dependencies.findAll {it instanceof ExternalModuleDependency}.collect{conf.files(it)}
+		                    }.flatten().unique().each { f ->
+	                            node.appendNode('classpathentry', [kind: 'lib', path: f, exported: true])
+	                        }
+	                        
 		                    configurations.each { conf ->
-		                        conf.dependencies.findAll {it instanceof ExternalModuleDependency}.collect{conf.files(it)}.flatten().each { f ->
-		                            node.appendNode('classpathentry', [kind: 'lib', path: f, exported: true])
-		                        }
 			                    conf.dependencies.findAll {it instanceof ProjectDependency}.each {
 			                        node.appendNode('classpathentry', [kind: 'src', path: "/${it.dependencyProject.name}", exported: true])
 			                    }
 		                    }
+		                    
 		                    node.appendNode('classpathentry', [kind: 'con', path: 'com.android.ide.eclipse.adt.LIBRARIES', exported: true])
 		                    node.appendNode('classpathentry', [kind: 'con', path: 'com.android.ide.eclipse.adt.DEPENDENCIES', exported: true])
 		                    node.appendNode('classpathentry', [kind: 'con', path: 'com.android.ide.eclipse.adt.ANDROID_FRAMEWORK'])
