--- a/android.main/AndroidManifest.xml
+++ b/android.main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -58,6 +58,10 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sneer.android.main.ui.MainActivity" />
+        </activity>
+        <activity
+            android:name="sneer.android.main.ui.ContactActivity"
+            android:label="@string/title_activity_contact" >
         </activity>
     </application>
 
