--- a/core/build.gradle
+++ b/core/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     compile 'org.clojure:clojure:1.6.0'
     compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
     compile 'org.clojure:java.jdbc:0.3.4'
-    compile 'com.netflix.rxjava:rxjava-clojure:0.19.6'
+    compile 'com.netflix.rxjava:rxjava-clojure:' + external.rx.version
     compile 'com.cognitect:transit-clj:0.8.229'
     compile 'com.google.guava:guava:17.0'
     compile project(':java-api')
