--- a/android-api/build.gradle
+++ b/android-api/build.gradle
@@ -48,9 +48,9 @@ configurations {
 
 dependencies {
     libs 'us.bpsm:edn-java:0.4.4'
-    libs 'com.netflix.rxjava:rxjava-android:0.19.6'
+    libs 'com.netflix.rxjava:rxjava-android:' + external.rx.version
     compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
-	compile 'me.sneer:java-api:+'
+    compile 'me.sneer:java-api:+'
 }
 
 android {
