--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 import java.nio.file.*;
 import org.gradle.api.artifacts.*;
 
+ext {
+    external = [
+        'rx': [version: '0.20.0']
+    ]
+}
+
 buildscript {
     repositories {
         mavenCentral()
@@ -62,13 +68,13 @@ subprojects {
 		                    }.flatten().unique().each { f ->
 	                            node.appendNode('classpathentry', [kind: 'lib', path: f, exported: true])
 	                        }
-	                        
+
 		                    configurations.each { conf ->
 			                    conf.dependencies.findAll {it instanceof ProjectDependency}.each {
 			                        node.appendNode('classpathentry', [kind: 'src', path: "/${it.dependencyProject.name}", exported: true])
 			                    }
 		                    }
-		                    
+
 		                    node.appendNode('classpathentry', [kind: 'con', path: 'com.android.ide.eclipse.adt.LIBRARIES', exported: true])
 		                    node.appendNode('classpathentry', [kind: 'con', path: 'com.android.ide.eclipse.adt.DEPENDENCIES', exported: true])
 		                    node.appendNode('classpathentry', [kind: 'con', path: 'com.android.ide.eclipse.adt.ANDROID_FRAMEWORK'])
