--- a/core.tests/build.gradle
+++ b/core.tests/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     compile 'org.clojure:clojure:1.6.0'
     compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
     compile 'org.clojure:java.jdbc:0.3.4'
-    compile 'com.netflix.rxjava:rxjava-clojure:0.19.6'
+    compile 'com.netflix.rxjava:rxjava-clojure:' + external.rx.version
     compile project(':java-api')
     compile project(':core')
     compile project(':server')
