--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -13,7 +13,7 @@ sourceSets {
 }
 
 dependencies {
-    compile 'com.netflix.rxjava:rxjava-core:0.19.6'
+    compile 'com.netflix.rxjava:rxjava-core:' + external.rx.version
     compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
 }
 
