--- a/android.main/AndroidManifest.xml
+++ b/android.main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".SneerApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -62,6 +63,21 @@
         <activity
             android:name="sneer.android.main.ui.ContactActivity"
             android:label="@string/title_activity_contact" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="sneer.me"
+                    android:pathPrefix="/public-key"
+                    android:scheme="http" />
+                <data
+                    android:host="www.sneer.me"
+                    android:pathPrefix="/public-key"
+                    android:scheme="http" />
+            </intent-filter>
         </activity>
     </application>
 
