--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -14,6 +14,7 @@ sourceSets {
 
 dependencies {
     compile 'com.netflix.rxjava:rxjava-core:' + external.rx.version
+    compile 'com.netflix.rxjava:rxjava-async-util:' + external.rx.version
     compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
 }
 
