--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,10 +5,8 @@ apply plugin: "java"
 apply plugin: "eclipse"
 apply plugin: "maven"
 
-tasks.withType(JavaCompile) {
-    sourceCompatibility = "1.6"
-    targetCompatibility = "1.6"
-}
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 buildscript {
     repositories {
