--- a/android-api/build.gradle
+++ b/android-api/build.gradle
@@ -50,8 +50,8 @@ dependencies {
     libs 'us.bpsm:edn-java:0.4.4'
     libs 'com.netflix.rxjava:rxjava-android:' + external.rx.version
     compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
-//    compile project(':java-api')
-    compile 'me.sneer:java-api:+'
+    compile project(':java-api')
+    //compile 'me.sneer:java-api:+'
 }
 
 android {
