--- a/android.main/build.gradle
+++ b/android.main/build.gradle
@@ -24,8 +24,8 @@ repositories {
 }
 
 dependencies {
-    compile 'me.sneer:core:0.0.1'
-//    compile project(':core')
+//    compile 'me.sneer:core:0.0.1'
+    compile project(':core')
     compile 'us.bpsm:edn-java:0.4.4'
     compile 'com.google.android:support-v4:r7'
     compile project(':android-api')
