--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -21,6 +21,9 @@ dependencies {
 
 android {
 
+	lintOptions {
+		abortOnError false
+	}
     packagingOptions {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
