--- a/android/android.main.tests/build.gradle
+++ b/android/android.main.tests/build.gradle
@@ -39,7 +39,8 @@ android {
 		abortOnError false
 	}
     packagingOptions {
-        exclude 'META-INF/LICENSE'
+		exclude 'LICENSE.txt'
+		exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
 
