add condition to only upload archives if ourJar did work (which is false if jar has not changed), so we avoid unnecessary artefact uploads

--- a/android/android-api/build.gradle
+++ b/android/android-api/build.gradle
@@ -148,6 +148,9 @@ if(shouldPublish) {
 
 afterEvaluate {
 	uploadArchives {
+	
+		onlyIf { ourJar.didWork }
+		
 		repositories {
 			if (!shouldPublish) {
 			    mavenLocal()
