--- a/android/android.main/AndroidManifest.xml
+++ b/android/android.main/AndroidManifest.xml
@@ -21,13 +21,23 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <receiver android:name=".SneerBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
-        <activity
+        
+        <receiver android:name=".AppInstallationMonitor"  android:exported="true" android:enabled="true">
+            <intent-filter>
+                  <data android:scheme="package"/>
+                
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+            </intent-filter>
+        </receiver>
+		
+		<activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -51,6 +61,7 @@
                 <action android:name="sneer.android.service.BACKEND" />
             </intent-filter>
         </service>
+        
 
         <activity
             android:name=".SystemReportActivity"
