avoid IllegalAccessError when running android tests by removing duplicate jars from the final classpath (http://juristr.com/blog/2010/06/android-instrumentation-test/)

--- a/android/android.main.tests/build.gradle
+++ b/android/android.main.tests/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 dependencies {
-  compile project(':android-api')
+  compile project(':android.main')
   compile 'me.sneer:core.tests:0.0.1'
 }
 
