--- a/core.tests/build.gradle
+++ b/core.tests/build.gradle
@@ -55,13 +55,13 @@ eclipse.project {
 }
 
 dependencies {
-    compile 'org.clojure:clojure:1.6.0'
-    compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
-    compile 'org.clojure:java.jdbc:0.3.4'
-    compile 'com.netflix.rxjava:rxjava-clojure:' + external.rx.version
+    provided 'org.clojure:clojure:1.6.0'
+    provided 'org.clojure:core.async:0.1.303.0-886421-alpha'
+    optional 'org.clojure:java.jdbc:0.3.4'
+    provided 'com.netflix.rxjava:rxjava-clojure:' + external.rx.version
     provided 'junit:junit:4.11'
     optional 'org.xerial:sqlite-jdbc:3.7.15-M1'
-    compile project(':java-api')
-    compile project(':core')
-    compile project(':server')
+    provided project(':java-api')
+    provided project(':core')
+    optional project(':server')
 }
