--- a/core/build.gradle
+++ b/core/build.gradle
@@ -48,7 +48,9 @@ dependencies {
     compile 'org.clojure:clojure:1.6.0'
     compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
     compile 'com.netflix.rxjava:rxjava-clojure:' + external.rx.version
-    compile 'com.cognitect:transit-clj:0.8.229'
+    compile('com.cognitect:transit-clj:0.8.229') {
+    	exclude group: 'org.msgpack', module: 'msgpack'
+    }
     compile project(':java-api')
 }
 
