--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -16,7 +16,10 @@ sourceSets {
 dependencies {
     compile 'com.netflix.rxjava:rxjava-core:' + external.rx.version
     compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
-    compile 'com.google:bitcoinj:0.11.3'
+    compile('com.google:bitcoinj:0.11.3') {
+    	exclude group: 'com.google.protobuf', module: 'protobuf-java'
+    	exclude group: 'com.lambdaworks', module: 'scrypt'
+    }
 }
 
 uploadArchives {
