core clojure depends on core java

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,6 +39,10 @@ sourceSets {
     }
 }
 
+afterEvaluate {
+	compileClojure.dependsOn compileJava
+}
+
 eclipse.project {
     natures 'ccw.nature'
     buildCommand 'ccw.builder'
