--- a/android/android-api/build.gradle
+++ b/android/android-api/build.gradle
@@ -38,7 +38,7 @@ android {
     buildToolsVersion external.android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion external.android.minSdkVersion
         targetSdkVersion external.android.sdkVersion
     }
 
