--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -32,7 +32,7 @@ android {
     buildToolsVersion external.android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion external.android.minSdkVersion
         targetSdkVersion external.android.sdkVersion
     }
 
