move android apps to android/apps

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,9 @@ subprojects {
 
     afterEvaluate {
 
+        if (!plugins.hasPlugin('android') && !plugins.hasPlugin('android-library'))
+           return
+
         sourceCompatibility = 1.6
         targetCompatibility = 1.6
 
