--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,1 +1,2 @@
-include 'android-api', 'android.main', 'android.main.tests', 'sendpics'
+include 'android-api', 'android.main', 'android.main.tests'
+include 'apps:sendpics', 'apps:voicemessage'
