--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sneer.android.voicemessage"
+    android:installLocation="internalOnly"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -20,15 +21,14 @@
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
-            <meta-data android:name="sneer:handler" android:value="MESSAGE" />
-            <meta-data android:name="sneer:type" android:value="audio" />
-            <meta-data android:name="sneer:label" android:value="Send Voice Message" />
-            <meta-data android:name="sneer:icon" android:resource="@drawable/ic_launcher" />
+            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE" />
+		    <meta-data android:name="sneer:tuple-type" android:value="audio" />
+		    <meta-data android:name="sneer:menu-caption" android:value="Send Voice Message" />
+		    <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />            
+            
         </activity>
     </application>
 
