--- a/android/android.main/AndroidManifest.xml
+++ b/android/android.main/AndroidManifest.xml
@@ -21,23 +21,24 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <receiver android:name=".SneerBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        
-        <receiver android:name=".AppInstallationMonitor"  android:exported="true" android:enabled="true">
+        <receiver
+            android:name=".AppInstallationMonitor"
+            android:enabled="true"
+            android:exported="true" >
             <intent-filter>
-                  <data android:scheme="package"/>
-                
+                <data android:scheme="package" />
+
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
             </intent-filter>
         </receiver>
-		
-		<activity
+
+        <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -52,8 +53,11 @@
         </activity>
         <activity
             android:name=".ui.ProfileActivity"
-            android:label="@string/title_activity_profile" />
-
+            android:label="@string/title_activity_profile" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="sneer.android.main.ui.MainActivity" />
+        </activity>
 
         <service
             android:name=".TupleSpaceService"
@@ -62,7 +66,6 @@
                 <action android:name="sneer.android.service.TUPLE_SPACE" />
             </intent-filter>
         </service>
-        
 
         <activity
             android:name=".ui.SystemReportActivity"
@@ -75,6 +78,10 @@
         <activity
             android:name="sneer.android.main.ui.ContactActivity"
             android:label="@string/title_activity_contact" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="sneer.android.main.ui.MainActivity" />
+
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
