--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.DeviceDefault.Dialog" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="Recording" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
