--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault.Dialog" >
         <activity
-            android:name=".MainActivity"
+            android:name=".VoiceMessageActivity"
             android:label="Recording" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
