Exclude SendMessageActivity from recent apps list. Also remove android:installLocation="internalOnly" from VoiceMessage

--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sneer.android.voicemessage"
-    android:installLocation="internalOnly"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -19,6 +18,7 @@
         android:theme="@android:style/Theme.DeviceDefault.Dialog" >
         <activity
             android:name=".VoiceMessageActivity"
+            android:excludeFromRecents="true"
             android:label="Recording" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -28,7 +28,6 @@
 		    <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
 		    <meta-data android:name="sneer:menu-caption" android:value="Send Voice Message" />
 		    <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />            
-            
         </activity>
     </application>
 
