--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -19,15 +19,19 @@
         <activity
             android:name=".VoiceMessageActivity"
             android:excludeFromRecents="true"
-            android:label="Recording" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
             <meta-data android:name="sneer:interaction-type" android:value="MESSAGE" />
-		    <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
-		    <meta-data android:name="sneer:menu-caption" android:value="Send Voice Message" />
-		    <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />            
+            <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
+            <meta-data android:name="sneer:menu-caption" android:value="Send Voice Message" />
+            <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
+        </activity>
+        <activity
+            android:name=".VoiceMessageOpenActivity"
+            android:label="@string/title_activity_voice_message_open" >
         </activity>
     </application>
 
