--- a/android/apps/sendpics/AndroidManifest.xml
+++ b/android/apps/sendpics/AndroidManifest.xml
@@ -12,20 +12,30 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Dialog" >
+        android:theme="@android:style/Theme.DeviceDefault.Dialog" >
         <activity
             android:name=".SendPicsActivity"
             android:label="@string/app_name" >
-
             <intent-filter>
-		        <action android:name="android.intent.action.VIEW" />
-		    </intent-filter>
-		     
-		    <meta-data android:name="sneer:interaction-type" android:value="MESSAGE" />
-		    <meta-data android:name="sneer:tuple-type" android:value="picture" />
-		    <meta-data android:name="sneer:menu-caption" android:value="Send Pictures" />
-		    <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
-		    
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+
+            <meta-data
+                android:name="sneer:interaction-type"
+                android:value="MESSAGE" />
+            <meta-data
+                android:name="sneer:tuple-type"
+                android:value="picture" />
+            <meta-data
+                android:name="sneer:menu-caption"
+                android:value="Send Pictures" />
+            <meta-data
+                android:name="sneer:menu-icon"
+                android:resource="@drawable/ic_launcher" />
+        </activity>
+        <activity
+            android:name=".ReceivePicsActivity"
+            android:label="@string/title_activity_receive_pics" >
         </activity>
     </application>
 
