--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sneer.android.voicemessage"
+    package="sneer.android.voicemessage" 
+    android:screenOrientation="portrait"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -19,7 +20,7 @@
         <activity
             android:name=".VoiceMessageActivity"
             android:excludeFromRecents="true"
-            android:label="@string/app_name" >
+            android:label="@string/title_activity_voice_message" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
@@ -31,7 +32,8 @@
         </activity>
         <activity
             android:name=".OpenVoiceMessageActivity"
-            android:label="@string/title_activity_voice_message_open" >
+            android:excludeFromRecents="true"
+            android:label="@string/title_activity_open_voice_message" >
         </activity>
     </application>
 
