server test src folder

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -28,6 +28,11 @@ sourceSets {
             aotCompile = true
         }
     }
+    test {
+    	clojure {
+    		srcDir 'test'
+    	}
+    }
 }
 
 eclipse.project {
@@ -39,4 +44,5 @@ dependencies {
     compile 'org.clojure:clojure:1.6.0'
     compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
     compile project(':core')
+    testCompile 'midje:midje:1.6.3'
 }
