--- a/android/apps/sendpics/AndroidManifest.xml
+++ b/android/apps/sendpics/AndroidManifest.xml
@@ -20,18 +20,10 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
-            <meta-data
-                android:name="sneer:interaction-type"
-                android:value="MESSAGE" />
-            <meta-data
-                android:name="sneer:tuple-type"
-                android:value="picture" />
-            <meta-data
-                android:name="sneer:menu-caption"
-                android:value="Send Pictures" />
-            <meta-data
-                android:name="sneer:menu-icon"
-                android:resource="@drawable/ic_launcher" />
+            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE" />
+            <meta-data android:name="sneer:tuple-type" android:value="picture" />
+            <meta-data android:name="sneer:menu-caption" android:value="Send Pictures" />
+            <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
         <activity
             android:name=".ReceivePicsActivity"
