refactor message interaction plugin to be split into view and open activities

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,2 @@
 include 'android-api', 'android.main', 'android.main.tests'
-include 'apps:sendpics', 'apps:voicemessage'
+include 'apps:sendpics', 'apps:voicemessage', 'apps:sendlocation'
