--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
-            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE" />
+            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/COMPOSE" />
             <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
             <meta-data android:name="sneer:menu-caption" android:value="Send Voice Message" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
@@ -34,6 +34,12 @@
             android:name=".OpenVoiceMessageActivity"
             android:excludeFromRecents="true"
             android:label="@string/title_activity_open_voice_message" >
+            <intent-filter>
+		        <action android:name="android.intent.action.VIEW" />
+		    </intent-filter>
+            
+            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/VIEW" />
+            <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
         </activity>
     </application>
 
