--- a/android/apps/sendfiles/AndroidManifest.xml
+++ b/android/apps/sendfiles/AndroidManifest.xml
@@ -12,23 +12,17 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.DeviceDefault.Dialog" >
         <activity
             android:name=".SendFilesActivity"
-            android:label="@string/app_name" >
+            android:excludeFromRecents="true"
+            android:label="@string/title_activity_send_files" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
             </intent-filter>
             
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.VIEW" /> -->
-            <!-- </intent-filter> -->
-
-            
             <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/COMPOSE" />
-            <meta-data android:name="sneer:tuple-type" android:value="file" />
+            <meta-data android:name="sneer:tuple-type" android:value="text/plain" />
             <meta-data android:name="sneer:menu-caption" android:value="Send File" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
