Reliable client started.

--- a/core.tests/build.gradle
+++ b/core.tests/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     provided project(':java-api')
     provided project(':core')
     optional project(':server')
+    testCompile 'midje:midje:1.6.3'
 }
