sendfiles: send ok. Receive wip.

--- a/android/apps/sendfiles/AndroidManifest.xml
+++ b/android/apps/sendfiles/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
+    
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -15,27 +17,28 @@
         android:theme="@android:style/Theme.DeviceDefault.Dialog" >
         <activity
             android:name=".SendFilesActivity"
-            android:excludeFromRecents="true"
-            android:label="@string/title_activity_send_files" >
+            android:excludeFromRecents="true" >
+         
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
             
             <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/COMPOSE" />
-            <meta-data android:name="sneer:tuple-type" android:value="text/plain" />
+            <meta-data android:name="sneer:tuple-type" android:value="file" />
             <meta-data android:name="sneer:menu-caption" android:value="Send File" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
         <activity
             android:name=".ViewSendFilesActivity"
-            android:label="@string/title_activity_view_send_files" >
-            
-<!--             <intent-filter> -->
-<!-- 		        <action android:name="android.intent.action.VIEW" /> -->
-<!-- 		    </intent-filter> -->
+            android:excludeFromRecents="true" >            
+    
+            <intent-filter>
+		        <action android:name="android.intent.action.VIEW" />
+		    </intent-filter>
             
             <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/VIEW" />
             <meta-data android:name="sneer:tuple-type" android:value="file" />
+            <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
     </application>
 
