IPC: normalize use of “plugin” instead of “app” for sneer apps

--- a/android/android.main/AndroidManifest.xml
+++ b/android/android.main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name=".AppInstallationMonitor"
+            android:name=".ipc.PluginMonitor"
             android:enabled="true"
             android:exported="true" >
             <intent-filter>
