IPC: s/InteractionType/PluginType

--- a/android/apps/sendpics/AndroidManifest.xml
+++ b/android/apps/sendpics/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
-            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/COMPOSE" />
+            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/COMPOSE" />
             <meta-data android:name="sneer:tuple-type" android:value="picture" />
             <meta-data android:name="sneer:menu-caption" android:value="Send Pictures" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
@@ -33,7 +33,7 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
-            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/VIEW" />
+            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/VIEW" />
             <meta-data android:name="sneer:tuple-type" android:value="picture" />
             <meta-data android:name="sneer:menu-caption" android:value="Send Pictures" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
