--- a/android/apps/sendfiles/AndroidManifest.xml
+++ b/android/apps/sendfiles/AndroidManifest.xml
@@ -23,7 +23,7 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
             
-            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/COMPOSE" />
+            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/COMPOSE" />
             <meta-data android:name="sneer:tuple-type" android:value="file" />
             <meta-data android:name="sneer:menu-caption" android:value="Send File" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
@@ -36,7 +36,7 @@
 		        <action android:name="android.intent.action.VIEW" />
 		    </intent-filter>
             
-            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/VIEW" />
+            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/VIEW" />
             <meta-data android:name="sneer:tuple-type" android:value="file" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
