--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
-            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/COMPOSE" />
+            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/COMPOSE" />
             <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
             <meta-data android:name="sneer:menu-caption" android:value="Send Voice Message" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
@@ -38,7 +38,7 @@
 		        <action android:name="android.intent.action.VIEW" />
 		    </intent-filter>
             
-            <meta-data android:name="sneer:interaction-type" android:value="MESSAGE/VIEW" />
+            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/VIEW" />
             <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
