--- a/android/apps/sendfiles/AndroidManifest.xml
+++ b/android/apps/sendfiles/AndroidManifest.xml
@@ -25,7 +25,7 @@
             
             <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/COMPOSE" />
             <meta-data android:name="sneer:tuple-type" android:value="file" />
-            <meta-data android:name="sneer:menu-caption" android:value="Send File" />
+            <meta-data android:name="sneer:menu-caption" android:value="File" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
         <activity
