--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
             <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/COMPOSE" />
             <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
-            <meta-data android:name="sneer:menu-caption" android:value="Send Voice Message" />
+            <meta-data android:name="sneer:menu-caption" android:value="Voice Message" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
         <activity
