tuple-transmission started

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -52,6 +52,7 @@ eclipse.project {
 dependencies {
     compile 'org.clojure:clojure:1.6.0'
     compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
+    compile 'org.clojure:core.match:0.2.1'
     compile 'com.netflix.rxjava:rxjava-clojure:' + external.rx.version
     compile('com.cognitect:transit-clj:0.8.229') {
     	exclude group: 'org.msgpack', module: 'msgpack'
