sendlocation: nicer message when it takes too long to get location

--- a/android/apps/sendlocation/AndroidManifest.xml
+++ b/android/apps/sendlocation/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name=".SendLocationActivity"
             android:excludeFromRecents="true"
-            android:label="@string/app_name" >
+            android:label="Searching for GPS..." >
 
             <intent-filter>
 		        <action android:name="android.intent.action.VIEW" />
